Display series memberships on workshop show (#288)
* remove original style link tag

* Add theme_name to series_membership

* Designate workshop to reference in series_description_for

* Put theme name before ordering

* Fix indentation

* Fix indentation

* Move description/tags back within main div post-merge

* Fix indentation

* Change test to not repeat title text

--- a/app/views/workshops/_show_body.html.erb
+++ b/app/views/workshops/_show_body.html.erb
@@ -105,6 +105,12 @@
             <% end %>
           </div>
         <% end %>
+
+        <% if workshop.workshop_series_children.any? %>
+          <%= render "show_series_membership_children",
+                     workshop: workshop,
+                     spanish: false %>
+        <% end %>
       <% end %>
     </div>
 
@@ -147,8 +153,17 @@
             <% end %>
           </div>
         <% end %>
+
+        <% if workshop.workshop_series_children.any? %>
+          <%= render "show_series_membership_children",
+                     workshop: workshop,
+                     spanish: true %>
+        <% end %>
       </div>
     <% end %>
   </div>
 </div>
 
+<% if workshop.workshop_series_parents.any? %>
+  <%= render "show_series_membership_parents", workshop: workshop %>
+<% end %>
