--- a/app/views/workshops/_workshop_series_child_fields.html.erb
+++ b/app/views/workshops/_workshop_series_child_fields.html.erb
@@ -9,6 +9,7 @@
 
   <%= f.input :series_description, as: :text, input_html: { rows: 1 } %>
   <%= f.input :series_description_spanish, as: :text, input_html: { rows: 1 } %>
+  <%= f.input :theme_name, as: :text, input_html: { rows: 1 } %>
   <%= f.input :series_order, as: :integer %>
   <%= link_to_remove_association "Remove", f , class:"btn-underline" %>
 </div>
