--- a/app/views/workshop_variations/_form.html.erb
+++ b/app/views/workshop_variations/_form.html.erb
@@ -3,33 +3,46 @@
 
   <div class="row">
     <div class="col-md-6">
-      <% if @workshop_variation.workshop %>
-        Variant of: <%= link_to(@workshop_variation.workshop.name,
-                                workshop_path(@workshop_variation.workshop)) %>
+      <% if @workshop %>
+        <%= f.hidden_field :workshop_id, value: @workshop.id %>
+
+        <div class="my-3">
+          Variant of: <span class="text-lg font-bold">
+          <%= link_to(@workshop.name,
+                      workshop_path(@workshop)) %></span>
+        </div>
+      <% else %>
+        <%= f.input :workshop_id,
+                    as: :select,
+                    collection: @workshops,
+                    prompt: "Select a Workshop" %>
       <% end %>
-      <%= f.input :workshop_id,
-                  as: :select,
-                  collection: @workshops %>
     </div>
   </div>
 
   <div class="row">
     <div class="col-md-6">
-      <%= f.input :name %>
+      <%= f.input :name, label: "Variation name" %>
       <%= f.input :code, as: :text,
-                  label: "Description (add your html)",
+                  label: "Share a little bit about your workshop variation, how you modified the workshop to fit your population/setting/facilitation style, and/or anything about how the workshop was received by participants, things you would do differently next time, etc.",
                   input_html: { rows: 10 } %>
     </div>
-    <div class="col-md-6">
-      <%= f.input :inactive, as: :boolean,
-                  input_html: { checked: f.object.id ? f.object.inactive : false } %>
-      <%= f.input :ordering, as: :integer %>
-    </div>
+    <% if current_user.super_user? %>
+      <div class="col-md-6 flex items-start gap-6 bg-blue-100 admin-only p-3">
+        <%= f.input :inactive, as: :boolean, label: "Not published?",
+                    input_html: { checked: f.object.id ? f.object.inactive : false } %>
+  
+        <%= f.input :ordering, as: :integer,
+                    input_html: { class: "w-24" } %>
+      </div>
+    <% end %>
   </div>
 
-  <%= link_to "Delete", @workshop_variation, class: "btn btn-danger-outline", method: :delete, data: { confirm: "Are you sure?" } %>
-  <%= link_to 'Cancel', workshop_variations_path, class: "btn btn-secondary-outline" %>
-  <%= f.submit 'Submit',
-               class: "px-4 py-2 border border-blue-600 hover:text-gray-600 hover:bg-white
+  <div class="mt-3">
+    <%= link_to "Delete", @workshop_variation, class: "btn btn-danger-outline", method: :delete, data: { confirm: "Are you sure?" } %>
+    <%= link_to 'Cancel', workshop_variations_path, class: "btn btn-secondary-outline" %>
+    <%= f.submit 'Submit',
+                 class: "px-4 py-2 border border-blue-600 hover:text-gray-600 hover:bg-white
                  rounded-lg bg-blue-600 text-white text-sm font-medium" %>
+  </div>
 <% end %>
