--- a/app/views/workshops/show.html.erb
+++ b/app/views/workshops/show.html.erb
@@ -8,7 +8,7 @@
       <%= render 'show_body', workshop: @workshop %>
     </div>
     <div class="print:hidden">
-      <%= render "show_associations" %>
+      <%= render "show_associations", workshop: @workshop %>
     </div>
   </div>
 </div>
