--- a/app/views/workshops/edit.html.erb
+++ b/app/views/workshops/edit.html.erb
@@ -3,7 +3,7 @@
 
     <!-- Header + View Button -->
     <div class="flex items-center justify-between mb-4">
-      <h1 class="text-2xl font-semibold text-gray-900">Edit Event</h1>
+      <h1 class="text-2xl font-semibold text-gray-900">Edit Workshop</h1>
       <%= link_to 'View', workshop_path(@workshop), class: "btn btn-secondary-outline" %>
     </div>
 
