--- a/app/views/resources/_resource_card.html.erb
+++ b/app/views/resources/_resource_card.html.erb
@@ -47,9 +47,11 @@
 
       <div class="flex justify-end items-center mt-4 space-x-2">
         <div class="flex items-center space-x-2">
-          <% if resource.attachments.any? %>
+          <% if resource.main_attachment&.file&.attached? %>
             <%= link_to "<span class='fa fa-download' title='Download #{resource.kind}'></span>".html_safe,
-                               resource_download_path(resource),
+                               resource_download_path(resource,
+                                                      from: controller_name == "resources" &&
+                                                        action_name == "index" ? "resources_index" : "unknown"),
                                class: "btn btn-utility" %>
           <% end %>
           <% if controller_name == "resources" %>
