--- a/app/views/workshop_variations/show.html.erb
+++ b/app/views/workshop_variations/show.html.erb
@@ -40,7 +40,7 @@
       <!-- Author and Date -->
       <div class="flex flex-col gap-1">
         <div class="flex items-center text-gray-600 text-sm gap-2">
-          <span><%= @workshop_variation.created_by %></span>
+          <span><%= @workshop_variation.created_by&.name %></span>
           <span class="<%= "border-l border-gray-400 pl-2" if @workshop_variation.created_by.present? %>">
             <%= @workshop_variation.created_at.strftime('%B %e, %Y') %>
           </span>
