--- a/app/views/bookmarks/_flex.html.erb
+++ b/app/views/bookmarks/_flex.html.erb
@@ -86,7 +86,7 @@
     <%= link_to workshop_path(workshop) do %>
       <img
         class="object-cover w-full h-full"
-        src="<%= workshop.images.last&.file&.url || asset_path('workshop_default.png') %>"
+        src="<%= workshop.images.last&.file&.url || asset_path('workshop_default.jpg') %>"
       >
     <% end %>
   </div>
